# hand-cricket

./: .gitignore  FuncS.py  LICENSE.md  NormalMode.py  Pipfile  README.md  dev-requirements.txt  main.py  normal_mode.py  pyproject.toml  requirements.txt
game/: __init__.py  gamelogic.py  normal_mode.py
tests/: test_returntypes.py
