[tool.poetry]
name = "hand-cricket"
version = "0.1.0"
description = "Digitalized version of Hand cricket"
authors = ["Omnath Mandal <omnathmandal2003@gmail.com>"]
readme = "README.md"
packages = [{include = "Functions"}]

[tool.poetry.dependencies]
python = "^3.11"
playsound = "1.2.2"
colorama = "^0.4.6"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
