[tool.poetry]
name = "hand-cricket"
version = "0.1.0"
description = "Digitalized version of Hand cricket"
license = "MIT"
authors = ["Omnath Mandal <omnathmandal2003@gmail.com>"]
readme = "README.md"
packages = [{include = "game"}, {include = "tests"}]
repository = "https://github.com/omnathmandal/hand-cricket"

[tool.poetry.dependencies]
python = "^3.11"
playsound = "1.2.2"
colorama = "^0.4.6"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
